Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-31913

Crash on debugger stop

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Not Evaluated
    • None
    • Qt Creator 16.0.0 (16.0 branch)
    • Debugger
    • None
    • Linux/X11
    • 84cefcc74 (master)

    Description

      
      Thread 1 (Thread 0x763b2b07be40 (LWP 256409)):
      #0  0x0000763b2a59d6d4 in QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::operator-> (this=0x8) at /home/jarek/dev/qt-68/qtbase/src/corelib/tools/qscopedpointer.h:92
      #1  0x0000763b2a5ae10a in QObject::parent (this=0x0) at /home/jarek/dev/qt-68/qtbase/src/corelib/kernel/qobject.h:346
      #2  0x0000763b2a5af29a in QWidget::parentWidget (this=0x0) at /home/jarek/dev/qt-68/qtbase/src/widgets/kernel/qwidget.h:906
      #3  0x0000763b2a631194 in QWidget::window (this=0x0) at /home/jarek/dev/qt-68/qtbase/src/widgets/kernel/qwidget.cpp:4333
      #4  0x0000763b106de637 in Debugger::Internal::DebuggerToolTipManagerPrivate::~DebuggerToolTipManagerPrivate (this=0x61ee5050e370, __in_chrg=<optimized out>) at /home/jarek/dev/creator-master/src/plugins/debugger/debuggertooltipmanager.cpp:867
      #5  0x0000763b106de6be in Debugger::Internal::DebuggerToolTipManagerPrivate::~DebuggerToolTipManagerPrivate (this=0x61ee5050e370, __in_chrg=<optimized out>) at /home/jarek/dev/creator-master/src/plugins/debugger/debuggertooltipmanager.cpp:868
      #6  0x0000763b106dd8e5 in Debugger::Internal::DebuggerToolTipManager::~DebuggerToolTipManager (this=0x61ee49ea98e8, __in_chrg=<optimized out>) at /home/jarek/dev/creator-master/src/plugins/debugger/debuggertooltipmanager.cpp:743
      #7  0x0000763b105e4f42 in Debugger::Internal::DebuggerEnginePrivate::~DebuggerEnginePrivate (this=0x61ee49ea8c10, __in_chrg=<optimized out>) at /home/jarek/dev/creator-master/src/plugins/debugger/debuggerengine.cpp:341
      #8  0x0000763b105e549a in Debugger::Internal::DebuggerEnginePrivate::~DebuggerEnginePrivate (this=0x61ee49ea8c10, __in_chrg=<optimized out>) at /home/jarek/dev/creator-master/src/plugins/debugger/debuggerengine.cpp:341
      #9  0x0000763b105d095a in Debugger::Internal::DebuggerEngine::~DebuggerEngine (this=0x61ee5143ad00, __in_chrg=<optimized out>) at /home/jarek/dev/creator-master/src/plugins/debugger/debuggerengine.cpp:887
      #10 0x0000763b104a7cbe in Debugger::Internal::CppDebuggerEngine::~CppDebuggerEngine (this=0x61ee5143ad00, __in_chrg=<optimized out>) at /home/jarek/dev/creator-master/src/plugins/debugger/debuggerengine.h:578
      #11 0x0000763b107000cb in Debugger::Internal::GdbEngine::~GdbEngine (this=0x61ee5143ad00, __in_chrg=<optimized out>) at /home/jarek/dev/creator-master/src/plugins/debugger/gdb/gdbengine.cpp:171
      #12 0x0000763b107000ea in Debugger::Internal::GdbEngine::~GdbEngine (this=0x61ee5143ad00, __in_chrg=<optimized out>) at /home/jarek/dev/creator-master/src/plugins/debugger/gdb/gdbengine.cpp:171
      #13 0x0000763b106c2a86 in qDeleteAll<QList<QPointer<Debugger::Internal::DebuggerEngine> >::const_iterator> (begin=..., end=...) at /home/jarek/dev/qt-68/qtbase/src/corelib/tools/qalgorithms.h:27
      #14 0x0000763b106c19e2 in qDeleteAll<QList<QPointer<Debugger::Internal::DebuggerEngine> > > (c=...) at /home/jarek/dev/qt-68/qtbase/src/corelib/tools/qalgorithms.h:35
      #15 0x0000763b106baa15 in Debugger::DebuggerRunTool::~DebuggerRunTool (this=0x61ee49da6980, __in_chrg=<optimized out>) at /home/jarek/dev/creator-master/src/plugins/debugger/debuggerruncontrol.cpp:976
      #16 0x0000763b106baaaa in Debugger::DebuggerRunTool::~DebuggerRunTool (this=0x61ee49da6980, __in_chrg=<optimized out>) at /home/jarek/dev/creator-master/src/plugins/debugger/debuggerruncontrol.cpp:980
      #17 0x0000763b199aa08d in qDeleteAll<QList<QPointer<ProjectExplorer::RunWorker> >::const_iterator> (begin=..., end=...) at /home/jarek/dev/qt-68/qtbase/src/corelib/tools/qalgorithms.h:27
      #18 0x0000763b199a5aa2 in qDeleteAll<QList<QPointer<ProjectExplorer::RunWorker> > > (c=...) at /home/jarek/dev/qt-68/qtbase/src/corelib/tools/qalgorithms.h:35
      #19 0x0000763b199a259e in ProjectExplorer::Internal::RunControlPrivate::~RunControlPrivate (this=0x61ee5060e8d0, __in_chrg=<optimized out>) at /home/jarek/dev/creator-master/src/plugins/projectexplorer/runcontrol.cpp:327
      #20 0x0000763b199a2622 in ProjectExplorer::Internal::RunControlPrivate::~RunControlPrivate (this=0x61ee5060e8d0, __in_chrg=<optimized out>) at /home/jarek/dev/creator-master/src/plugins/projectexplorer/runcontrol.cpp:329
      #21 0x0000763b199aaa20 in std::default_delete<ProjectExplorer::Internal::RunControlPrivate>::operator() (this=0x61ee50017470, __ptr=0x61ee5060e8d0) at /usr/include/c++/13/bits/unique_ptr.h:99
      #22 0x0000763b199a64aa in std::unique_ptr<ProjectExplorer::Internal::RunControlPrivate, std::default_delete<ProjectExplorer::Internal::RunControlPrivate> >::~unique_ptr (this=0x61ee50017470, __in_chrg=<optimized out>) at /usr/include/c++/13/bits/unique_ptr.h:404
      #23 0x0000763b1999558a in ProjectExplorer::RunControl::~RunControl (this=0x61ee50017460, __in_chrg=<optimized out>) at /home/jarek/dev/creator-master/src/plugins/projectexplorer/runcontrol.cpp:473
      #24 0x0000763b199955b6 in ProjectExplorer::RunControl::~RunControl (this=0x61ee50017460, __in_chrg=<optimized out>) at /home/jarek/dev/creator-master/src/plugins/projectexplorer/runcontrol.cpp:473
      #25 0x0000763b193e0b3a in ProjectExplorer::Internal::AppOutputPane::createNewOutputWindow (this=0x61ee470edff0, rc=0x61ee516aa9c0) at /home/jarek/dev/creator-master/src/plugins/projectexplorer/appoutputpane.cpp:406
      #26 0x0000763b193e1950 in ProjectExplorer::Internal::AppOutputPane::prepareRunControlStart (this=0x61ee470edff0, runControl=0x61ee516aa9c0) at /home/jarek/dev/creator-master/src/plugins/projectexplorer/appoutputpane.cpp:521
      #27 0x0000763b198476f0 in ProjectExplorer::ProjectExplorerPluginPrivate::startRunControl (this=0x61ee47106150, runControl=0x61ee516aa9c0) at /home/jarek/dev/creator-master/src/plugins/projectexplorer/projectexplorer.cpp:2590
      #28 0x0000763b198463ff in ProjectExplorer::ProjectExplorerPluginPrivate::executeRunConfiguration (this=0x61ee47106150, runConfiguration=0x61ee48f06170, runMode=...) at /home/jarek/dev/creator-master/src/plugins/projectexplorer/projectexplorer.cpp:2472
      #29 0x0000763b19847b70 in ProjectExplorer::ProjectExplorerPluginPrivate::buildQueueFinished (this=0x61ee47106150, success=true) at /home/jarek/dev/creator-master/src/plugins/projectexplorer/projectexplorer.cpp:2644
      #30 0x0000763b19895adb in QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<bool>, void, void (ProjectExplorer::ProjectExplorerPluginPrivate::*)(bool)>::call(void (ProjectExplorer::ProjectExplorerPluginPrivate::*)(bool), ProjectExplorer::ProjectExplorerPluginPrivate*, void**)::\{lambda()#1}::operator()() const (__closure=0x7ffdd3c27400) at /home/jarek/dev/qt-68/qtbase/src/corelib/kernel/qobjectdefs_impl.h:152
      #31 0x0000763b19899d51 in QtPrivate::FunctorCallBase::call_internal<void, QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<bool>, void, void (ProjectExplorer::ProjectExplorerPluginPrivate::*)(bool)>::call(void (ProjectExplorer::ProjectExplorerPluginPrivate::*)(bool), ProjectExplorer::ProjectExplorerPluginPrivate*, void**)::\{lambda()#1}>(void**, QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<bool>, void, void (ProjectExplorer::ProjectExplorerPluginPrivate::*)(bool)>::call(void (ProjectExplorer::ProjectExplorerPluginPrivate::*)(bool), ProjectExplorer::ProjectExplorerPluginPrivate*, void**)::\{lambda()#1}&&) (args=0x61ee4885e968, fn=...) at /home/jarek/dev/qt-68/qtbase/src/corelib/kernel/qobjectdefs_impl.h:65
      #32 0x0000763b19895b4f in QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<bool>, void, void (ProjectExplorer::ProjectExplorerPluginPrivate::*)(bool)>::call (f=(void (ProjectExplorer::ProjectExplorerPluginPrivate::*)(class ProjectExplorer::ProjectExplorerPluginPrivate * const, bool)) 0x763b19847950 <ProjectExplorer::ProjectExplorerPluginPrivate::buildQueueFinished(bool)>, o=0x61ee47106150, arg=0x61ee4885e968) at /home/jarek/dev/qt-68/qtbase/src/corelib/kernel/qobjectdefs_impl.h:151
      #33 0x0000763b1989095e in QtPrivate::FunctionPointer<void (ProjectExplorer::ProjectExplorerPluginPrivate::*)(bool)>::call<QtPrivate::List<bool>, void> (f=(void (ProjectExplorer::ProjectExplorerPluginPrivate::*)(class ProjectExplorer::ProjectExplorerPluginPrivate * const, bool)) 0x763b19847950 <ProjectExplorer::ProjectExplorerPluginPrivate::buildQueueFinished(bool)>, o=0x61ee47106150, arg=0x61ee4885e968) at /home/jarek/dev/qt-68/qtbase/src/corelib/kernel/qobjectdefs_impl.h:199
      #34 0x0000763b19889a2d in QtPrivate::QCallableObject<void (ProjectExplorer::ProjectExplorerPluginPrivate::*)(bool), QtPrivate::List<bool>, void>::impl (which=1, this_=0x61ee4731dce0, r=0x61ee47106150, a=0x61ee4885e968, ret=0x0) at /home/jarek/dev/qt-68/qtbase/src/corelib/kernel/qobjectdefs_impl.h:570
      #35 0x0000763b283eaf99 in QtPrivate::QSlotObjectBase::call (this=0x61ee4731dce0, r=0x61ee47106150, a=0x61ee4885e968) at /home/jarek/dev/qt-68/qtbase/src/corelib/kernel/qobjectdefs_impl.h:486
      #36 0x0000763b28473c3f in QMetaCallEvent::placeMetaCall (this=0x61ee4885e920, object=0x61ee47106150) at /home/jarek/dev/qt-68/qtbase/src/corelib/kernel/qobject.cpp:620
      #37 0x0000763b284752de in QObject::event (this=0x61ee47106150, e=0x61ee4885e920) at /home/jarek/dev/qt-68/qtbase/src/corelib/kernel/qobject.cpp:1419
      #38 0x0000763b2a5aa7ea in QApplicationPrivate::notify_helper (this=0x61ee464a5b80, receiver=0x61ee47106150, e=0x61ee4885e920) at /home/jarek/dev/qt-68/qtbase/src/widgets/kernel/qapplication.cpp:3294
      #39 0x0000763b2a5aa5dd in QApplication::notify (this=0x61ee464a50d0, receiver=0x61ee47106150, e=0x61ee4885e920) at /home/jarek/dev/qt-68/qtbase/src/widgets/kernel/qapplication.cpp:3245
      #40 0x0000763b283e3245 in QCoreApplication::notifyInternal2 (receiver=0x61ee47106150, event=0x61ee4885e920) at /home/jarek/dev/qt-68/qtbase/src/corelib/kernel/qcoreapplication.cpp:1168
      #41 0x0000763b283e3f59 in QCoreApplication::sendEvent (receiver=0x61ee47106150, event=0x61ee4885e920) at /home/jarek/dev/qt-68/qtbase/src/corelib/kernel/qcoreapplication.cpp:1612
      #42 0x0000763b283e566d in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x61ee46483950) at /home/jarek/dev/qt-68/qtbase/src/corelib/kernel/qcoreapplication.cpp:1968
      #43 0x0000763b286c18c9 in QEventDispatcherUNIX::processEvents (this=0x61ee464a7890, flags=...) at /home/jarek/dev/qt-68/qtbase/src/corelib/kernel/qeventdispatcher_unix.cpp:418
      #44 0x0000763b23713c84 in QXcbUnixEventDispatcher::processEvents (this=0x61ee464a7890, flags=...) at /home/jarek/dev/qt-68/qtbase/src/plugins/platforms/xcb/qxcbeventdispatcher.cpp:24
      #45 0x0000763b283fad7b in QEventLoop::processEvents (this=0x7ffdd3c27c10, flags=...) at /home/jarek/dev/qt-68/qtbase/src/corelib/kernel/qeventloop.cpp:103
      #46 0x0000763b283fb4b0 in QEventLoop::exec (this=0x7ffdd3c27c10, flags=...) at /home/jarek/dev/qt-68/qtbase/src/corelib/kernel/qeventloop.cpp:194
      #47 0x0000763b283e3c1c in QCoreApplication::exec () at /home/jarek/dev/qt-68/qtbase/src/corelib/kernel/qcoreapplication.cpp:1513
      #48 0x0000763b294083b8 in QGuiApplication::exec () at /home/jarek/dev/qt-68/qtbase/src/gui/kernel/qguiapplication.cpp:1975
      #49 0x0000763b2a5a77b7 in QApplication::exec () at /home/jarek/dev/qt-68/qtbase/src/widgets/kernel/qapplication.cpp:2562
      #50 0x000061ee44c0a3d1 in main (argc=1, argv=0x7ffdd3c284c8) at /home/jarek/dev/creator-master/src/app/main.cpp:909
      
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jkobus Jarek Kobus
            jkobus Jarek Kobus
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes