Debugger: Fix a crash

Ensure that editor and editor window aren't nullptr.

Amends b04271108cfca914991a248d4fe84755efca6036

Fixes: QTCREATORBUG-31913
Change-Id: I3ed7e6d67cecea40a011b0ccaa6f1439375c04ab
Reviewed-by: Eike Ziller <eike.ziller@qt.io>